# pandasai-app

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: update.yml
.streamlit/: config.toml
data/: questions.md  test_data.csv
pandasai_app/: main.py  prompts.py  utils.py
pandasai_app/components/: faq.py  sidebar.py
