[tool.poetry]
name = "pandasai-app"
version = "1.0.0"
description = "An app to have conversational pandas dataframes"
authors = ["Datafy Associates <info@datafyassociates.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pandasai_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.25"
faiss-cpu = "^1.7.3"
pillow = "^9.4.0"
tenacity = "^8.2.0"
pandasai = "^1.0.9"
langchain = {version = ">=0.0.252", extras = ["docarray"]}
tabulate = "^0.9.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
