[tool.poetry]
name = "pandasai-app"
version = "1.0.0"
description = "An app to have conversational pandas dataframes"
authors = ["Datafy Associates <info@datafyassociates.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pandasai_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "1.39.0"
pandasai = "2.2.15"
numpy = "1.26.3"
PyYAML = "^6.0.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "8.3.3"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
